🔨 zoom in on mobile fixed

--- a/public/global.css
+++ b/public/global.css
@@ -153,3 +153,24 @@ label {
   font-size: var(--baseFontSize);
   max-width: 70ch;
 }
+
+/* If the font-size is below 16px mobile browsers zoom in on inputs */
+
+select,
+textarea,
+input[type="text"],
+input[type="password"],
+input[type="datetime"],
+input[type="datetime-local"],
+input[type="date"],
+input[type="month"],
+input[type="time"],
+input[type="week"],
+input[type="number"],
+input[type="email"],
+input[type="url"],
+input[type="search"],
+input[type="tel"],
+input[type="color"] {
+  font-size: 16px;
+}
